--- a/references.html
+++ b/references.html
@@ -24,6 +24,7 @@
     <ul>
       <li>Photo by Framer — <em>Portfolio Website Templates</em> https://www.framer.com/marketplace/templates/category/portfolio/</li>
       <li>Template inspiration — <em>Food and Agriculture Organization of the United Nations</em> https://aims.fao.org/news/access-ict-during-training-workshops-lesson-agorateeal-workshop-nigeria
+      <li>Hero - <em>Information and Communication Technology (ICT) | Oando Foundation</em>https://oandofoundation.org/information-and-communication-technology-ict/</li>
       </li>
     </ul>
   </main>
